# cert-util

./: .gitignore  Cargo.toml
.run/: Run actix_web_tls.run.xml  Run generate_cert.run.xml  Run generate_intermediate_ca.run.xml  Run reqwest_tls.run.xml
certs/: intermediate.crt  intermediate_pri.key  intermediate_pub.key  leaf.crt  leaf_pri.key  leaf_pub.key  private.key  pub.key  root.crt  root_pri.key  root_pub.key
examples/: actix_web_tls.rs  actix_web_tls_with_client_auth.rs  cert_info.rs  reqwest_tls.rs  verify_server_cert.rs
src/: lib.rs
