[package]
name = "cert_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6.1"
rand = "0.8.5"
picky = { version = "6.3.0", features = ["chrono_conversion"] }
anyhow = "1.0.56"
chrono = "0.4"
rustls-pemfile = "1.0.0"