[package]
name = "cert_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6.1"
rand = "0.8.5"
picky = { version = "6.3.0", features = ["chrono_conversion"] }
anyhow = "1.0.56"
chrono = "0.4"
rustls-pemfile = "1.0.0"
rustls-native-certs = "0.6.2"
rustls = "0.20.4"
x509-parser = "0.13.2"

[dev-dependencies]
actix-web = { version = "4.0.1", features = ["rustls"] }
reqwest = { version = "0.11.10" , default-features = false, features = ["rustls-tls"]}
env_logger = "0.9.0"
der-parser = "8.0.0"
nom = "7.1.1"
tokio = { version = "1.17.0", features = ["full"] }