[package]
name = "cert_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6.1"
rand = "0.8.5"
picky = { version = "6.3.0", features = ["chrono_conversion"] }
anyhow = "1.0.56"
chrono = "0.4"
rustls-pemfile = "1.0.0"
rustls-native-certs = "0.6.2"
rustls = "0.20.4"
x509-parser = "0.13.2"
actix-web = { version = "4.0.1" }
reqwest = { version = "0.11.10"}
log = "0.4.17"
tokio = { version = "1.17.0", features = ["full"] }
custom-utils = "0.10.11"
[dev-dependencies]

der-parser = "8.0.0"
nom = "7.1.1"
[features]
default = []
openssl = ["actix-web/openssl", "reqwest/native-tls"]
rusttls = ["actix-web/rustls", "reqwest/rustls-tls"]

